--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -1,75 +1,84 @@
 {% extends 'layout/base.html' %}
-{% block title %}{{super()}} | Overview{% endblock %}
+{% block title %}{{ super() }} | Overview{% endblock %}
 {% block content %}
-{{super()}}
+    {{ super() }}
 
-<div class="container headline-container">
-    <h1>
-        {% if nav_properties.selected_league %}
-        {{nav_properties.selected_league.short_name}}{% if nav_properties.selected_season %} | {{nav_properties.selected_season.name}}{%endif%}{%endif%}</h1>
-</div>
-{% if team_results|length == 0 %}
-<div class="container">
-    <h2>No teams entered so far</h2>
-</div>
-{% else %}
-<div class="container">
-    <h2>Teams</h2>
-</div>
-<div class="container">
-    <a href="{{ url_for('download_table',entity_type='teams') }}"
-       class="btn btn-warning">
-        <i class="bi bi-people-fill"></i>
-        Teams Table Download
-    </a>
-</div>
-<div class="container container-table">
-    {% include 'fragments/teams_table.html' %}
-</div>
-<div class="container container-table">
-    <h3>Casualties</h3>
-</div>
-<div class="container container-table">
-    {% include 'fragments/teams_casualties_table.html' %}
-</div>
+    <div class="container headline-container">
+        <h1>
+            {% if nav_properties.selected_league %}
+                {{ nav_properties.selected_league.short_name }}{% if nav_properties.selected_season %} | {{ nav_properties.selected_season.name }}{% endif %}{% endif %}</h1>
+    </div>
+    {% if team_results|length == 0 %}
+        <div class="container">
+            <h2>No teams entered so far</h2>
+        </div>
+    {% else %}
 
-<div class="container">
-    <h2>Coaches</h2>
-</div>
-<div class="container">
-    <a href="{{ url_for('download_table',entity_type='coaches') }}"
-       class="btn btn-warning">
-        <i class="bi bi-person-square"></i>
-        Coaches Table Download
-    </a>
-</div>
-<div class="container container-table">
-    {% include 'fragments/coaches_table.html' %}
-</div>
-<div class="container">
-    <h3>Casualties</h3>
-</div>
-<div class="container container-table">
-    {% include 'fragments/coaches_casualties_table.html' %}
-</div>
-<div class="container">
-    <h2>Races</h2>
-</div>
-<div class="container">
-    <a href="{{ url_for('download_table',entity_type='races') }}"
-       class="btn btn-warning">
-        <i class="bi bi-robot"></i>
-        Races Table Download
-    </a>
-</div>
-<div class="container container-table">
-    {% include 'fragments/races_table.html' %}
-</div>
-<div class="container">
-    <h3>Casualties</h3>
-</div>
-<div class="container container-table">
-    {% include 'fragments/races_casualties_table.html' %}
-</div>
-{% endif %}
+        <div class="container">
+            <h2>Statistics</h2>
+        </div>
+        <div class="container container-table">
+            {% include 'fragments/stats.html' %}
+        </div>
+
+        <div class="container">
+            <h2>Teams</h2>
+        </div>
+        <div class="container">
+            <a href="{{ url_for('download_table',entity_type='teams') }}"
+               class="btn btn-warning">
+                <i class="bi bi-people-fill"></i>
+                Teams Table Download
+            </a>
+        </div>
+        <div class="container container-table">
+            {% include 'fragments/teams_table.html' %}
+        </div>
+        <div class="container container-table">
+            <h3>Casualties</h3>
+        </div>
+        <div class="container container-table">
+            {% include 'fragments/teams_casualties_table.html' %}
+        </div>
+
+
+        <div class="container">
+            <h2>Coaches</h2>
+        </div>
+        <div class="container">
+            <a href="{{ url_for('download_table',entity_type='coaches') }}"
+               class="btn btn-warning">
+                <i class="bi bi-person-square"></i>
+                Coaches Table Download
+            </a>
+        </div>
+        <div class="container container-table">
+            {% include 'fragments/coaches_table.html' %}
+        </div>
+        <div class="container">
+            <h3>Casualties</h3>
+        </div>
+        <div class="container container-table">
+            {% include 'fragments/coaches_casualties_table.html' %}
+        </div>
+        <div class="container">
+            <h2>Races</h2>
+        </div>
+        <div class="container">
+            <a href="{{ url_for('download_table',entity_type='races') }}"
+               class="btn btn-warning">
+                <i class="bi bi-robot"></i>
+                Races Table Download
+            </a>
+        </div>
+        <div class="container container-table">
+            {% include 'fragments/races_table.html' %}
+        </div>
+        <div class="container">
+            <h3>Casualties</h3>
+        </div>
+        <div class="container container-table">
+            {% include 'fragments/races_casualties_table.html' %}
+        </div>
+    {% endif %}
 {% endblock %}
