--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -7,9 +7,11 @@
     let backdrop = document.querySelector('.backdrop');
     let modalPostDeleteDialog = document.getElementById('submitted-user-input-dialog');
 
-            function dismissModal() {
-                window.location = '{{ url_for('home') }}'
-            }
+    function dismissModal() {
+        window.location = '{{ url_for('
+        home
+        ') }}'
+    }
 
     modalPostDeleteDialog.style.display = 'block';
     backdrop.style.display = 'block';
