--- a/server/templates/imaging/teams_table_for_image.html
+++ b/server/templates/imaging/teams_table_for_image.html
@@ -6,20 +6,22 @@
 </head>
 <body>
 <div class="title-row">
-    <img src="logo_league_{{league.id}}.png" alt="logo">
-    <h1>{{league.name}} | {{season.name}}</h1>
+    <img src="logo_league_{{ league.id }}.png" alt="logo">
+    <h1>{{ league.name }} | {{ season.name }}</h1>
 </div>
 <div class="framed-table">
     {% include 'fragments/teams_table.html' %}
 </div>
-<div class="title-row">
-    <h2>Casualties</h2>
-</div>
-<div class="framed-table">
-    {% include 'fragments/teams_casualties_table.html' %}
-</div>
+{% if team_casualties|length > 0 %}
+    <div class="title-row">
+        <h2>Casualties</h2>
+    </div>
+    <div class="framed-table">
+        {% include 'fragments/teams_casualties_table.html' %}
+    </div>
+{% endif %}
 <div class="date-line">
-    <p>Stand: {{creation_date}}</p>
+    <p>Stand: {{ creation_date }}</p>
 </div>
 </body>
 </html>
