--- a/server/templates/fragments/teams_casualties_table.html
+++ b/server/templates/fragments/teams_casualties_table.html
@@ -1,21 +1,25 @@
 {% import 'fragments/table_macros.html' as table_commons %}
 <table class="bordered">
+    <thead>
     <tr>
         <th>Platz</th>
-        <th>{{term_for_team_names}}</th>
-        <th>{{term_for_races}}</th>
-        <th>{{term_for_coaches}}</th>
+        <th>{{ term_for_team_names }}</th>
+        <th>{{ term_for_races }}</th>
+        <th>{{ term_for_coaches }}</th>
         <th>Spiele</th>
         <th>Casualties</th>
     </tr>
+    </thead>
+    <tbody>
     {% for result in team_casualties %}
-    <tr>
-        <td class="center">{{result.place}}</td>
-        <td><strong>{{result.team_short_name}}</strong></td>
-        <td>{{result.race}}</td>
-        <td>{{result.coach}}</td>
-        <td class="center"><strong>{{result.number_of_matches}}</strong></td>
-        <td class="center"><strong class="scored-points">{{result.casualties}}</strong></td>
-    </tr>
-    {%endfor%}
+        <tr>
+            <td class="center">{{ result.place }}</td>
+            <td><strong>{{ result.team_short_name }}</strong></td>
+            <td>{{ result.race }}</td>
+            <td>{{ result.coach }}</td>
+            <td class="center"><strong>{{ result.number_of_matches }}</strong></td>
+            <td class="center"><strong class="scored-points">{{ result.casualties }}</strong></td>
+        </tr>
+    {% endfor %}
+    </tbody>
 </table>
