--- a/server/templates/fragments/teams_table.html
+++ b/server/templates/fragments/teams_table.html
@@ -1,22 +1,26 @@
 {% import 'fragments/table_macros.html' as table_commons %}
 <table class="bordered">
+    <thead>
     <tr>
         <th>Platz</th>
-        <th>{{term_for_team_names}}</th>
-        <th>{{term_for_races}}</th>
-        <th>{{term_for_coaches}}</th>
-        {{table_commons.common_headers(scorings)}}
+        <th>{{ term_for_team_names }}</th>
+        <th>{{ term_for_races }}</th>
+        <th>{{ term_for_coaches }}</th>
+        {{ table_commons.common_headers(scorings) }}
         <th>Punkte</th>
     </tr>
+    </thead>
+    <tbody>
     {% for result in team_results %}
-    <tr>
-        <td class="center{% if result.number_of_matches>0 and loop.index <= number_of_playoff_places %} highlight-table-cell{% endif %}">{{result.place}}</td>
-        <td><strong>{{result.team_short_name}}</strong></td>
-        <td>{{result.race}}</td>
-        <td>{{result.coach}}</td>
-        <td class="center{% if result.number_of_matches == number_of_allowed_matches %} highlight-table-cell{% endif %}"><strong>{{result.number_of_matches}}</strong></td>
-        {{table_commons.common_results(result)}}
-        <td class="center"><strong class="scored-points">{{result.points}}</strong></td>
-    </tr>
-    {%endfor%}
+        <tr>
+            <td class="center{% if result.number_of_matches>0 and loop.index <= number_of_playoff_places %} highlight-table-cell{% endif %}">{{ result.place }}</td>
+            <td><strong>{{ result.team_short_name }}</strong></td>
+            <td>{{ result.race }}</td>
+            <td>{{ result.coach }}</td>
+            <td class="center{% if result.number_of_matches == number_of_allowed_matches %} highlight-table-cell{% endif %}"><strong>{{ result.number_of_matches }}</strong></td>
+            {{ table_commons.common_results(result) }}
+            <td class="center"><strong class="scored-points">{{ result.points }}</strong></td>
+        </tr>
+    {% endfor %}
+    </tbody>
 </table>
