--- a/server/templates/fragments/coaches_table.html
+++ b/server/templates/fragments/coaches_table.html
@@ -30,7 +30,11 @@
     {% for result in coach_results %}
         <tr>
             <td class="center">{{ result.place }}</td>
-            <td><a href="/statistics/coach/{{ result.coach_id }}"><strong>{{ result.coach }}</strong></a></td>
+            <td>
+                {% if show_coaches_stats_link %}<a href="/statistics/coach/{{ result.coach_id }}">{% endif %}
+                <strong>{{ result.coach }}</strong>
+                {% if show_coaches_stats_link %}</a>{% endif %}
+            </td>
             <td class="center"><strong>{{ result.number_of_seasons }}</strong></td>
             <td class="center"><strong>{{ result.number_of_teams }}</strong></td>
             <td class="center"><strong>{{ result.number_of_matches }}</strong></td>
