--- a/server/templates/statistics.html
+++ b/server/templates/statistics.html
@@ -1,44 +1,47 @@
-{% extends 'layout/base.html' %}
+{% extends 'layout/base-form.html' %}
 {% block title %}{{ super() }} | Statistics{% endblock %}
 {% block content %}
-{{ super() }}
+    {{ super() }}
 
-<div class="container headline-container">
-    <h1>Statistics</h1>
-</div>
-<div class="container container-table">
-    {% include 'fragments/stats.html' %}
-</div>
-{% if coach_results|length == 0 %}
-<div class="container">
-    <h2>No teams entered so far</h2>
-</div>
-{% else %}
-<div class="container">
-    <h2>Coaches</h2>
-</div>
-<div class="container">
-    <a href="{{ url_for('download_table',entity_type='coaches') }}"
-       class="btn btn-warning">
-        <i class="bi bi-person-square"></i>
-        Coaches Table Download
-    </a>
-</div>
-<div class="container container-table">
-    {% include 'fragments/coaches_table.html' %}
-</div>
-<div class="container">
-    <h2>Races</h2>
-</div>
-<div class="container">
-    <a href="{{ url_for('download_table',entity_type='races') }}"
-       class="btn btn-warning">
-        <i class="bi bi-robot"></i>
-        Races Table Download
-    </a>
-</div>
-<div class="container container-table">
-    {% include 'fragments/races_table.html' %}
-</div>
-{% endif %}
+    <div class="container headline-container">
+        <h1>Statistics</h1>
+    </div>
+    <div class="container container-table">
+        {% include 'fragments/stats.html' %}
+    </div>
+    {% if coach_results|length == 0 %}
+        <div class="container">
+            <h2>No teams entered so far</h2>
+        </div>
+    {% else %}
+        <div class="container">
+            {{ wtf.quick_form(form,novalidate=True) }}
+        </div>
+        <div class="container">
+            <h2>Coaches</h2>
+        </div>
+        <div class="container">
+            <a href="{{ url_for('download_table', entity_type='coaches') }}"
+               class="btn btn-warning">
+                <i class="bi bi-person-square"></i>
+                Coaches Table Download
+            </a>
+        </div>
+        <div class="container container-table">
+            {% include 'fragments/coaches_table.html' %}
+        </div>
+        <div class="container">
+            <h2>Races</h2>
+        </div>
+        <div class="container">
+            <a href="{{ url_for('download_table',entity_type='races') }}"
+               class="btn btn-warning">
+                <i class="bi bi-robot"></i>
+                Races Table Download
+            </a>
+        </div>
+        <div class="container container-table">
+            {% include 'fragments/races_table.html' %}
+        </div>
+    {% endif %}
 {% endblock %}
