--- a/server/templates/layout/base.html
+++ b/server/templates/layout/base.html
@@ -3,6 +3,8 @@
 {% block styles %}
     {{ super() }}
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico',_external=True) }}">
+    <link rel="apple-touch-icon" href="{{ url_for('static', filename='favicon.png',_external=True) }}" />
+    <link rel="apple-touch-icon-precomposed" href="{{ url_for('static', filename='favicon.png',_external=True) }}"/>
     <link rel="stylesheet" href="https://icons.getbootstrap.com/assets/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/styles.css') }}">
 {% endblock %}
