--- a/server/templates/fragments/stats.html
+++ b/server/templates/fragments/stats.html
@@ -51,5 +51,11 @@
             <td class="center">{{ stat.number_of_coaches }}</td>
         {% endfor %}
     </tr>
+    <tr>
+        <td>Number of casualties</td>
+        {% for stat in stats %}
+            <td class="center">{{ stat.number_of_casualties }}</td>
+        {% endfor %}
+    </tr>
     </tbody>
 </table>
