--- a/server/templates/fragments/teams_casualties_table.html
+++ b/server/templates/fragments/teams_casualties_table.html
@@ -1,4 +1,7 @@
 {% import 'fragments/table_macros.html' as table_commons %}
+<div class="container">
+    <h4>Gesamtzahl der Casualties: {{ total_number_of_casualties }}</h4>
+</div>
 <table class="bordered">
     <thead>
     <tr>
