--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -70,7 +70,7 @@
             {% include 'fragments/teams_table.html' %}
         </div>
         {% if team_casualties|length > 0 %}
-            <div class="container container-table">
+            <div class="container">
                 <h3>Casualties</h3>
             </div>
             <div class="container container-table">
