--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -55,6 +55,29 @@
             <h2>No teams entered so far</h2>
         </div>
     {% else %}
+        <div class="container">
+            <h2>Season Statistik</h2>
+        </div>
+        <div class="container">
+            <table class="bordered">
+                <thead>
+                <tr>
+                    <th>Number of Teams</th>
+                    <th>Number of Coaches</th>
+                    <th>Number of Matches</th>
+                    <th>Number of Casualties</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td class="center">{{ season_statistics.number_of_teams }}</td>
+                    <td class="center">{{ season_statistics.number_of_coaches }}</td>
+                    <td class="center">{{ season_statistics.number_of_matches }}</td>
+                    <td class="center">{{ total_number_of_casualties }}</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
 
         <div class="container">
             <h2>Teams</h2>
