--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -56,7 +56,7 @@
         </div>
     {% else %}
         <div class="container">
-            <h2>Season Statistik</h2>
+            <h2>Season Statistics</h2>
         </div>
         <div class="container">
             <table class="bordered">
